[gd_scene load_steps=5 format=3 uid="uid://nf3v7x6euql7"]

[ext_resource type="Script" uid="uid://c2yxagw1ptyhi" path="res://ScreenManager.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://xvth038882ag" path="res://MainMenuScreen.gd" id="2_r0du0"]
[ext_resource type="PackedScene" uid="uid://dqyrxafvubfij" path="res://EquipScreen.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://bykhhuqt4oyd2" path="res://MapView.tscn" id="4_cm0pq"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenManager" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_glv2v")

[node name="MainMenuScreen" type="PanelContainer" parent="CanvasLayer/ScreenManager"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_r0du0")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScreenManager/MainMenuScreen"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/ScreenManager/MainMenuScreen/VBoxContainer"]
layout_mode = 2
text = "GameScreen"

[node name="EquipScreen" type="Button" parent="CanvasLayer/ScreenManager/MainMenuScreen/VBoxContainer"]
layout_mode = 2
text = "EquipScreen"

[node name="EquipScreen" type="PanelContainer" parent="CanvasLayer/ScreenManager"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" parent="CanvasLayer/ScreenManager/EquipScreen" instance=ExtResource("2_uu6xs")]
layout_mode = 2

[node name="GameScreen" parent="CanvasLayer/ScreenManager" instance=ExtResource("4_cm0pq")]
layout_mode = 1

[connection signal="pressed" from="CanvasLayer/ScreenManager/MainMenuScreen/VBoxContainer/Button" to="CanvasLayer/ScreenManager/MainMenuScreen" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ScreenManager/MainMenuScreen/VBoxContainer/EquipScreen" to="CanvasLayer/ScreenManager/MainMenuScreen" method="_on_equip_screen_pressed"]
